# bsuir_university

./: .gitignore
2022_H1/CSAN_KSIS/: lab1.cpp
2022_H1/CSAN_KSIS/lab1/: Source.cpp
2022_H1/CSAN_KSIS/lab2/ClionProject/: CMakeLists.txt  main.cpp
2022_H1/CSAN_KSIS/lab2/ClionProject/tcp/: client.cpp  server.cpp
2022_H1/CSAN_KSIS/lab2/ClionProject/udp/: client.cpp  server.cpp
2022_H1/CSAN_KSIS/lab3/: client.py  client_custom.py  custom_time.py  server.py
2022_H1/IT_TI/lab3/: main.py  ui.py  ui.ui
2022_H1/IT_TI/lab4/: enc.txt  enc1.txt  enc2.txt  gui.py  main.py
2022_H1/SDT_TRPO/: TRPO lab 1 finale.bp1
2022_H1/SDT_TRPO/my/: 1.bp1  10.bp1  11.bp1  12.bp1  13.bp1  14.bp1  15.bp1  16.bp1  17.bp1  18.bp1  19.bp1  2.bp1  20.bp1  22.bp1  23.bp1  24.bp1  3.bp1  4.bp1  5.bp1  6.bp1  7.bp1  8.bp1  9.bp1
2022_H1/WT/lab3/: companies.csv  form.html  metod_1.php  task1.php  task2.php
2022_H1/WT/lab6/: login.html  main.php  main2.php
2022_H1/WT/lab7/: metod.php  sent.txt
2022_H2/OOP/: lab2.ldb
2022_H2/SPP/DirectoryScanner/: DirectoryScanner.sln
2022_H2/SPP/Faker/: Faker.sln
2022_H2/SPP/TestGenerator/: TestGenerator.sln
2022_H2/SPP/string-formatter/: string-formatter.sln
2022_H2/Tracer/Tracer/: Tracer.sln
2022_H2/moptim/2/: Book1.xlsx  v1.docx
2022_H2/moptim/3/: 3_lab (2).xlsx  Voprosy_po_LR3.docx  Лабораторная 3.docx  (+1 more)
2022_H2/npo/: Npo_5.docx  l5.docx  npo_ll.docx
2022_H2/ozi/: Авторское право (ЛК8-9) (1).doc  Введение ОИС в гражданский оборот.doc  Интеллектуальная собсвенность (ЛК7).doc  Промышленная собственность (ЛК10-12) (1).doc
(+302 files in other folders)
